--- a/css/login.css
+++ b/css/login.css
@@ -1,28 +1,85 @@
 body {
   height: 100vh;
-  background: rgb(85, 215, 229);
-  background: linear-gradient(
-    115deg,
-    rgba(85, 215, 229, 1) 0%,
-    rgba(137, 66, 234, 1) 72%,
-    rgba(158, 5, 235, 1) 100%
-  );
+  background: linear-gradient(115deg,
+      rgba(85, 215, 229, 1) 0%,
+      rgba(137, 66, 234, 1) 72%,
+      rgba(158, 5, 235, 1) 100%);
   background-size: contain;
   background-repeat: no-repeat;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  color: #272734;
 }
 
 .icon {
-  margin-left: 330px;
+  margin-left: 430px;
 }
+
 h1 {
   text-align: center;
-  font-size: 25px;
+  font-size: 30px;
   font-weight: bold;
+  margin-bottom: 20px;
 }
+
 .wrapper-login {
-  width: 350px;
-  height: 400px;
+  width: 450px;
+  height: 450px;
   background-color: #ffffff;
   margin: 70px auto;
   padding-top: 10px;
+
+}
+
+.wraper-input {
+  width: 400px;
+  margin-left: 25px;
+
+}
+
+.email-wrapper {
+  margin-bottom: 20px;
+}
+
+.label {
+  font-size: 20px;
+
+}
+
+input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+  margin-top: 5px;
+}
+
+#password {
+  margin-bottom: 10px;
+}
+
+.pass-a {
+  font-size: 18px;
+  color: #779ebf;
+}
+
+.login-button {
+  width: 100%;
+  height: 50px;
+  margin: 40px 0;
+  background: linear-gradient(115deg,
+      rgba(85, 215, 229, 1) 0%,
+      rgba(137, 66, 234, 1) 72%,
+      rgba(158, 5, 235, 1) 100%);
+  border: none;
+  color: #f5f5ff;
+  font-size: 20px;
+}
+
+.sign-up {
+  margin-left: 90px;
+  font-size: 18px;
+}
+
+.signup-a {
+  color: #779ebf;
 }
